--- a/app/views/chessVue.scala.html
+++ b/app/views/chessVue.scala.html
@@ -31,14 +31,14 @@
 
     <div id="chess-app"></div>
 
-    <script>
-    let app = new Vue({
-    el: '#chess-app',
-    render: function(html) {
-    return html(ChessApp.default, {});
-    }
-    })
-    </script>
+@*    <script>*@
+@*    var app = new Vue({*@
+@*    el: '#chess-app',*@
+@*    render: function(html) {*@
+@*    return html(ChessApp.default, {});*@
+@*    }*@
+@*    })*@
+@*    </script>*@
 
     <div class="buttoncontainer">
         <a href="/restart" class="btn btn-primary">Restart<br></a>
