small fix for play chess redirect.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/schach">Play Chess</a>
+                        <a class="nav-link" href="/chessVue">Play Chess</a>
                     </li>
                 </ul>
             </div>
