added routes for service-worker/registerserviceworker and manifest.json.

--- a/app/views/offlineChess.scala.html
+++ b/app/views/offlineChess.scala.html
@@ -7,9 +7,9 @@
         a { color: #dc8100; text-decoration: none; }
         a:hover { color: #333; text-decoration: none; }
 </style>
-<title>Site Maintenance</title>
+<title>Chess server is offline</title>
 
 <div>
     <h1>404 - Page not found</h1>
-    <p>Chess server currently unavailable...plz be patient.!</p>
+    <p>Chess server currently unavailable...plz be patient.</p>
 </div>
