--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,26 +10,21 @@
 <html lang="en">
     <head>
         @* Here's where we render the page title `String`. *@
-    <title>@title</title>
+        <title>@title</title>
 
-        <!-- Bootstrap CSS -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <!-- Bootstrap CSS -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS on CDN server, set contentSecurityPolicy in application.conf to allow these URLs-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+            <!-- Bootstrap CSS on CDN server, set contentSecurityPolicy in application.conf to allow these URLs-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-        <!-- Bootstrap on your own server
-        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
-    <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>-->
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
-
-
-
-    <script src="@routes.Assets.versioned("javascripts/chess.js")" ></script>
+            <!-- Bootstrap on your own server
+            <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>-->
+        <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
+        <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+        <script src="@routes.Assets.versioned("javascripts/chess.js")" ></script>
     </head>
     <body>
         @* And here's where we render the `Html` object containing
@@ -37,8 +32,9 @@
         @content
 
         <!-- Bootstrap code on CDN server, set contentSecurityPolicy in application.conf to allow these URLs-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="/registerServiceWorker.js"></script>
 
     </body>
 </html>
